--- a/aluaidiots/index.css
+++ b/aluaidiots/index.css
@@ -1,5 +1,5 @@
 html {
-    scroll-behavior: smooth
+    scroll-behavior: smooth;
 }
 
 @media screen and (prefers-reduced-motion:reduce) {
@@ -90,6 +90,8 @@ html {
     width: 60vw;
     margin: 16px 16px 4px;
     cursor: zoom-in;
+    -webkit-transition-duration: 0.2s;
+    transition-duration: 0.2s;
 }
 
 .desc {
@@ -97,4 +99,9 @@ html {
     font-size: 12px;
     text-align: center;
     margin: 0px 0px 8px;
+}
+
+.contact a {
+    color: #2196F3;
+    text-decoration: none
 }
