--- a/aluaidiots/index.css
+++ b/aluaidiots/index.css
@@ -1,5 +1,5 @@
 html {
-    scroll-behavior: smooth;
+    scroll-behavior: smooth
 }
 
 @media screen and (prefers-reduced-motion:reduce) {
@@ -8,7 +8,7 @@ html {
     }
 }
 
-.toc {
+nav {
     border-left: 3px solid;
     font-size: 16px;
     margin: 0;
@@ -16,14 +16,14 @@ html {
 }
 
 @media (min-width: 480px) {
-    .toc {
+    nav {
         border-left-width: 4px;
         font-size: 17px
     }
 }
 
 @media (min-width: 840px) {
-    .toc {
+    nav {
         border-left-width: 5px;
         font-size: 18px;
         margin-right: 400px
@@ -31,58 +31,58 @@ html {
 }
 
 @media (min-width: 480px) {
-    .toc:before {
+    nav:before {
         padding-left: 18px
     }
 }
 
 @media (min-width: 840px) {
-    .toc:before {
+    nav:before {
         padding-left: 20px
     }
 }
 
-.toc a {
+nav a {
     color: inherit;
     text-decoration: none
 }
 
-.toc ul {
+nav ul {
     list-style: none;
     margin: 0;
     padding-left: 16px
 }
 
 @media (min-width: 480px) {
-    .toc ul {
+    nav ul {
         padding-left: 18px
     }
 }
 
 @media (min-width: 840px) {
-    .toc ul {
+    nav ul {
         padding-left: 20px
     }
 }
 
-.toc ul li {
+nav ul li {
     margin: 1em 0
 }
 
-.toc ul li:first-child {
+nav ul li:first-child {
     margin-top: 0
 }
 
-.toc ul li:last-child {
+nav ul li:last-child {
     margin-bottom: 0
 }
 
-.toc ul li ul {
+nav ul li ul {
     font-size: .83em;
     margin: 1em 0
 }
 
-.toc>ul {
+nav>ul {
     margin-top: 1em
 }
 
@@ -91,22 +91,33 @@ html {
     margin: 16px 16px 4px;
     cursor: zoom-in;
     -webkit-transition-duration: 0.2s;
-    transition-duration: 0.2s;
+    transition-duration: 0.2s
 }
 
 .video {
     width: 60vw;
-    margin: 16px 16px 4px;
+    margin: 16px 16px 4px
 }
 
 .desc {
     color: #808080;
     font-size: 12px;
     text-align: center;
-    margin: 0px 0px 8px;
+    margin: 0px 0px 8px
 }
 
 .contact a {
     color: #2196F3;
     text-decoration: none
+}
+
+.mdui-typo>h2 {
+    display: inline-block
+}
+
+.mdui-typo>.mdui-btn {
+    float: right;
+    margin-top: 1.2em;
+    margin-bottom: .6em;
+    line-height: 1.35
 }
