--- a/aluaidiots/index.css
+++ b/aluaidiots/index.css
@@ -10,7 +10,7 @@ html {
 
 nav {
     border-left: 3px solid;
-    font-size: 16px;
+    font-size: 18px;
     margin: 0;
     position: relative
 }
@@ -25,14 +25,14 @@ nav {
 @media (min-width: 840px) {
     nav {
         border-left-width: 5px;
-        font-size: 18px;
+        font-size: 20px;
         margin-right: 400px
     }
 }
 
 @media (min-width: 480px) {
     nav:before {
-        padding-left: 18px
+        padding-left: 20px
     }
 }
 
@@ -66,7 +66,7 @@ nav ul {
 }
 
 nav ul li {
-    margin: 1em 0
+    margin: 0
 }
 
 nav ul li:first-child {
@@ -78,12 +78,12 @@ nav ul li:last-child {
 }
 
 nav ul li ul {
-    font-size: .83em;
-    margin: 1em 0
+    font-size: 16px;
+    margin: 8px 0
 }
 
 nav>ul {
-    margin-top: 1em
+    margin-top: 0
 }
 
 .image {
@@ -117,9 +117,21 @@ nav>ul {
     display: inline-block
 }
 
-.mdui-typo>.mdui-btn {
+.mdui-typo>mdui-button-icon {
     float: right;
     margin-top: 1.2em;
     margin-bottom: .6em;
     line-height: 1.35
+}
+
+mdui-chip {
+    margin: 0 4px
+}
+
+.center {
+    text-align: center
+}
+
+.mdui-container {
+    padding: 8px
 }
