--- a/aluaidiots/index.css
+++ b/aluaidiots/index.css
@@ -11,7 +11,7 @@ html {
 nav {
     border-left: 3px solid;
     font-size: 18px;
-    margin: 0;
+    margin: 0 8px;
     position: relative
 }
 
@@ -108,20 +108,22 @@ nav>ul {
     margin: 0px 0px 8px
 }
 
+.contact {
+    margin: 8px
+}
+
 .contact a {
     color: #2196F3;
     text-decoration: none
 }
 
 .mdui-typo>h2 {
-    display: inline-block
+    display: inline-block;
+    margin: 0 8px
 }
 
 .mdui-typo>mdui-button-icon {
-    float: right;
-    margin-top: 0.6em;
-    margin-bottom: 0.6em;
-    line-height: 1.35
+    float: right
 }
 
 mdui-chip {
